--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8" />
-    <script src="Exo1.js"></script>
-    <title>JavaScript Exercice 1</title>
+    <script src="scriptJS.js"></script>
+    <title>JavaScript Exercice 2</title>
   </head>
   <body>
-  <input type = "button" onclick = "HelloYou()" value = "Coucou Toi">  
+  <p id="demo"></p>
   </body>
   </html>
